Version 1.2.0
---------------------------------------------------------------
5 March 2008
+ PageSmith now allows the sorting of templates
+ Page titles now added to search.
+ Wrong page ids don't 404. Send to message page.
+ templates/page_templates/*, templates/pick_folder.tpl,
  templates/pick_template.tpl, templates/style.css,
  conf/folder_icons.php, img/folder_icons/*

27 February 2008
+ Search indexing added to update and version raised.

25 February 2008
+ Added search to pagesmith. Thanks Verdon.

20 February 2008
+ Changed to new url rewriting method.

Version 1.1.0
----------------------------------------------------------------
8 Feb 2008
+ Fixed call to getFile instead of getTag
+ Saving a page deletes its cache key.
+ Added threesec template
+ Updated: templates/page_templates/threesec/page.css
           "/page.tpl, "/structure.xml, "/threesec.png
                                             

6 February 2008
+ Pagesmith works with new File Cabinet

15 January 2008
+ Changed pagesmith to work with xmlparser changes
+ Added url parser to passinfo script to allow images to work in some
  editors (i.e. fck)
+ Updated files: javascript/passinfo/head.js

Version 1.0.7
----------------------------------------------------------------
11 December 2007
+ PageSmith can be set to automatically create a link when a new page
  is created.
+ Changing a page title now updates the menu link.
+ Updated : templates/settings.tpl

Version 1.0.6
----------------------------------------------------------------
5 December 2007
+ Added open_window in case a cached page has a clickable image.

Version 1.0.5
-----------------------------------------------------------------
29 November 2007
+ Changed wording on move to front functionality
+ Added move to front to miniadmin

25 October 2007
+ Fixed text_only template. Missing closing </div>
+ Updated: templates/page_templates/text_only/page.tpl

Version 1.0.4
-----------------------------------------------------------------